# TokenBench

./: .gitignore  CONTEXT_HANDOFF.md  DATASHEET.md  DECISIONS.md  Dockerfile.template  LEADERBOARD.md  README.md  SUBMISSION.md  chunk03_cost_projection.md  leaderboard.html  power_calc.md  pyproject.toml  requirements.txt  run_baselines.py  run_chunk2.py  run_chunk3.py  run_chunk6_rigor.py  run_demo.py  run_iso.py  tokenbench_architecture.md
chunks/: CHUNK_01_skeleton.md  CHUNK_02_first_signal.md  CHUNK_03_provider_expansion.md  CHUNK_04_reproducibility.md  CHUNK_05_judge.md  CHUNK_06_release.md  README.md
repro/: Makefile  README.md  STRANGER_LOG.md  requirements.lock.txt  run_cell.py
research/: agentic_provider_deferred.md  exit_gate_2_priors_floor.md  method_fairness_and_model_adapters.md  v1_0_close_out_plan.md
results/findings/: CHUNK_03_findings.md
scripts/: audit_runs.py  build_images.py  build_metrics_math_pdf.py  calibrate_judge.py  diagnose_ece.py  export_parquet.py  freeze_splits.py  generate_leaderboard.py  generate_swe_qa_candidates.py  label_swe_qa.py  sample_swe_qa.py  snapshot_repos.py  verify_snapshot.py
tests/: test_anthropic_adapter.py  test_baselines.py  test_calibrate_judge.py  test_dataset.py  test_exploit_detector.py  test_judge_trace_uri.py  test_llm_judge.py  test_metrics.py  test_rag.py  test_runner.py  test_runner_chunk4.py  test_schemas.py  test_snapshot.py  test_splits.py  test_sqlite_store.py  test_swe_qa_dataset.py  test_tokenizer.py
tokenbench/: __init__.py
tokenbench/audit/: __init__.py  exploit_detector.py
(+38 files in other folders)
